# Nebripop

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  opencode.json  project-context.md  skills-lock.json  wallapop-deep-research-report.md
.agents/: agents.json  architect-agent.md  devops-agent.md  docs-agent.md  prd_generator.md  reviewer-agent.md  security-agent.md  uiux-agent.md
.agents/skills/askama-best-practices/: SKILL.md
.agents/skills/askama-template/: SKILL.md
.agents/skills/axum-best-practices/: SKILL.md
.agents/skills/cargo-workspace/: SKILL.md
.agents/skills/clean-code-rust/: SKILL.md
.agents/skills/cloudinary-integration/: SKILL.md
.agents/skills/docker-rust/: SKILL.md
.agents/skills/error-handling-rust/: SKILL.md
.agents/skills/generate-architecture/: SKILL.md
.agents/skills/generate-prd/: SKILL.md
.agents/skills/github-actions-rust/: SKILL.md
.agents/skills/hexagonal-architecture-rust/: SKILL.md
.agents/skills/jwt-auth-rust/: SKILL.md
.agents/skills/meilisearch-integration/: SKILL.md
.agents/skills/rust-axum-handler/: SKILL.md
.agents/skills/rust-domain-modeling/: SKILL.md
.agents/skills/rust-integration-test/: SKILL.md
.agents/skills/security-audit-rust/: SKILL.md
.agents/skills/solid-rust/: SKILL.md
.agents/skills/sqlx-best-practices/: SKILL.md
.agents/skills/sqlx-migration/: SKILL.md
.agents/skills/stripe-integration/: SKILL.md
.agents/skills/tailwind-patterns/: SKILL.md
.agents/skills/websocket-rust/: SKILL.md
.cargo/: config.toml
.github/workflows/: ci.yml  deploy.yml
.opencode/: config.json
.opencode/agent/: codegen-chat-agent.md  codegen-payments-agent.md  codegen-search-agent.md  db-schema-agent.md
.opencode/agents/: auth-agent.md  codegen-chat-agent.md  codegen-core-agent.md  codegen-listings-agent.md  codegen-payments-agent.md  codegen-search-agent.md  db-schema-agent.md  qa-agent.md
crates/api/: Cargo.toml
crates/api/src/: app_state.rs  auth_extractor.rs  errors.rs  lib.rs  main.rs  router.rs
crates/api/src/web/: auth.rs  chat_web.rs  checkout.rs  filters.rs  home.rs  listing_create.rs  listing_detail.rs  listings.rs  mod.rs  profile.rs  search.rs
crates/api/templates/: base.html
crates/api/templates/auth/: login.html  register.html
crates/api/templates/chat/: conversation.html  list.html
crates/api/templates/pages/: home.html  listing_create.html  listing_detail.html  listings.html  search_results.html
crates/api/templates/partials/: empty_state.html  filters_sidebar.html  footer.html  listing_card.html  navbar.html  search_bar.html
crates/api/templates/payments/: checkout.html  error.html  success.html
crates/api/templates/users/: my_profile.html  profile.html
crates/chat/: Cargo.toml
crates/chat/src/: auth.rs  connections.rs  dtos.rs  errors.rs  lib.rs  models.rs  ports.rs  router.rs
crates/chat/src/adapters/: conversation_repo.rs  message_repo.rs  mod.rs  ws_adapter.rs
crates/chat/src/handlers/: create_conversation.rs  get_messages.rs  list_conversations.rs  mod.rs  send_message.rs  ws_handler.rs
crates/chat/src/usecases/: create_conversation_usecase.rs  get_messages_usecase.rs  list_conversations_usecase.rs  mod.rs  process_message_usecase.rs  send_message_usecase.rs  ws_lifecycle_usecase.rs
crates/chat/tests/: integration_chat.rs
crates/common/: Cargo.toml
crates/favorites/: Cargo.toml
crates/geo/: Cargo.toml
crates/listings/: Cargo.toml
crates/listings/src/: dtos.rs  errors.rs  lib.rs  models.rs  ports.rs  router.rs
crates/listings/src/adapters/: cloudinary.rs  listing_repository.rs  mod.rs
crates/listings/src/handlers/: create.rs  delete.rs  get_by_id.rs  list.rs  mod.rs  update.rs  upload_image.rs
crates/listings/src/usecases/: create_listing_usecase.rs  delete_listing_usecase.rs  get_listing_usecase.rs  mod.rs  update_listing_usecase.rs  upload_image_usecase.rs
crates/listings/tests/: integration_listings.rs
crates/payments/: Cargo.toml
crates/payments/src/: dtos.rs  errors.rs  models.rs  ports.rs  router.rs
crates/payments/src/adapters/: listing_adapter.rs  mod.rs  payment_repository.rs  stripe_adapter.rs
crates/payments/src/handlers/: create_intent.rs  get_status.rs  mod.rs  webhook.rs
crates/payments/src/usecases/: create_intent_usecase.rs  get_payment_status_usecase.rs  handle_webhook_usecase.rs  mod.rs
crates/payments/tests/: integration_payments.rs
crates/ratings/: Cargo.toml
crates/ratings/src/: dtos.rs  errors.rs  models.rs  ports.rs  router.rs
crates/ratings/src/adapters/: mod.rs  rating_repository.rs
crates/ratings/src/handlers/: create_rating.rs  list_ratings.rs  mod.rs
crates/ratings/src/usecases/: create_rating_usecase.rs  list_ratings_usecase.rs  mod.rs
crates/ratings/tests/: integration_ratings.rs
crates/search/: Cargo.toml
crates/search/src/: dtos.rs  errors.rs  models.rs  ports.rs  router.rs
crates/search/src/adapters/: meilisearch_adapter.rs  mod.rs  sql_fallback.rs
crates/search/src/handlers/: search.rs
crates/search/src/usecases/: index_listing_usecase.rs  mod.rs  search_usecase.rs
crates/search/tests/: integration_search.rs  search_tests.rs
crates/users/: Cargo.toml
crates/users/src/: dtos.rs  errors.rs  lib.rs  models.rs  ports.rs  router.rs
crates/users/src/adapters/: jwt.rs  mod.rs  password.rs  user_repository.rs
crates/users/src/handlers/: get_profile.rs  login.rs  logout.rs  mod.rs  refresh.rs  register.rs
crates/users/src/usecases/: login_usecase.rs  mod.rs  refresh_usecase.rs  register_usecase.rs
crates/users/tests/: integration_auth.rs
docs/: IMPLEMENTATION_PLAN.md  PRD.md  architecture.md
docs/ai_log/: 01_prd_generation.md  sprint-0.md  sprint-4.md
migrations/: 000000000000_postgis_extension.sql  20260527000001_create_users.sql  20260527000002_create_listings.sql  20260527000003_create_listing_images.sql  20260527000004_create_conversations.sql  20260527000005_create_messages.sql  20260527000006_create_payments.sql  20260527000007_create_ratings.sql  20260527000008_create_favorites.sql
(+33 files in other folders)
