[workspace]
members = [
    "crates/api",
    "crates/common",
    "crates/users",
    "crates/listings",
    "crates/chat",
    "crates/ratings",
    "crates/favorites",
    "crates/geo",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"

[workspace.dependencies]
axum = { version = "0.7", features = ["ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "uuid", "chrono", "runtime-tokio-native-tls", "rust_decimal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }
jsonwebtoken = "9"
argon2 = "0.5"
validator = { version = "0.18", features = ["derive"] }
dashmap = "6"
futures-util = "0.3"
dotenvy = "0.15"
tower = "0.4"
rust_decimal = { version = "1", features = ["serde-float"] }
async-trait = "0.1"
