[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum.workspace = true
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tower-http.workspace = true
dashmap.workspace = true
futures-util.workspace = true

common = { path = "../common" }
users = { path = "../users" }
listings = { path = "../listings" }
search = { path = "../search" }
chat = { path = "../chat" }
payments = { path = "../payments" }
ratings = { path = "../ratings" }
favorites = { path = "../favorites" }
geo = { path = "../geo" }
