[package]
name = "api"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
users = { path = "../users" }
chat = { path = "../chat" }
listings = { path = "../listings" }
ratings = { path = "../ratings" }
favorites = { path = "../favorites" }
geo = { path = "../geo" }
payments = { path = "../payments" }
search = { path = "../search" }
axum = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true }
jsonwebtoken = { workspace = true }
dotenvy = { workspace = true }
dashmap = { workspace = true }
tower = { workspace = true }
