[package]
name = "listings"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
users = { path = "../users" }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
rust_decimal = { workspace = true }
validator = { workspace = true }
async-trait = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
md-5 = "0.10"
