[package]
name = "payments"
version = "0.1.0"
edition = "2021"

[dependencies]
axum.workspace = true
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
validator.workspace = true
async-trait.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
reqwest.workspace = true
rust_decimal.workspace = true
subtle.workspace = true

common = { path = "../common" }
users = { path = "../users" }
listings = { path = "../listings" }

[dev-dependencies]
sqlx = { workspace = true, features = ["macros", "migrate"] }
rust_decimal = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
