[package]
name = "payments"
version = "0.1.0"
edition = "2021"

[dependencies]
axum.workspace = true
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
validator.workspace = true
async-trait.workspace = true
rust_decimal.workspace = true

# Stripe SDK — gestiona la comunicación con Stripe API y verifica webhooks
async-stripe = { version = "0.38", features = ["runtime-tokio-hyper", "webhook-events"] }

common = { path = "../common" }
users = { path = "../users" }
listings = { path = "../listings" }
