[package]
name = "users"
version = "0.1.0"
edition = "2021"

[dependencies]
axum.workspace = true
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
jsonwebtoken.workspace = true
argon2.workspace = true
validator.workspace = true

common = { path = "../common" }
